# AES_encryption

./: CMakeLists.txt  README.md
data/: PlainText
src/: Cryptopp_test.cpp  crc32.cpp
